--- a/index.html
+++ b/index.html
@@ -4,6 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email Project</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Background Color -->
+    <div class="flex items-center justify-center bg-zinc-700 h-screen">
+      <!-- Card -->
+      <div class="bg-zinc-800 rounded-2xl p-2 mx-6">
+        <!-- flex container -->
+        <div class="flex flex-col md:flex-row rounded-l-xl">
+          <!-- Image -->
+
+          <img
+            src="images/image.jpg"
+            alt=""
+            class="object-fit rounded-xl h-80 md:h-64 md:rounded-l-xl md:rounded-r-none transform hover:scale-105 hover:rounded-xl duration-200"
+          />
+          <div class="p-6 md:p-12">
+            <h2 class="text-white text-center text medium text-xl font-serif">
+              Get diet and fitness tips in your inbox
+            </h2>
+
+            <p
+              class="text-white text-xs text-medium my-4 text-center md:text-left max-w-xs tracking-wide leading-5"
+            >
+              Eat better and exercise better. Sign up for the Diet&Fitness
+              newsletter.
+            </p>
+            <div class="flex flex-col mt-5 md:flex-row">
+              <input
+                type="text"
+                placeholder="Enter your email address"
+                class="border border-zinc-600 bg-zinc-800 p-2 px-4 text-center text-white placeholder:text-center placeholder:text-xs focus:outline-none"
+              />
+              <button
+                class="px-5 py-3 text-xs rounded-md text-zinc-800 bg-lime-500 hover:bg-lime-700 hover:text-white duration-500"
+              >
+                Subcribe
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
